Fixed the numbers overflowing the display.

--- a/style.css
+++ b/style.css
@@ -54,4 +54,5 @@ button:hover{
     display: flex;
     align-items: center;
     justify-content: end;
+    overflow-x: auto;
 }
